# OBAnalizer

./: CMakeLists.txt
cython/: OBAnalizer.pyx
python/: deeper_look.py  example_serialize.py  serialize.py
src/: BBOExtractor.cpp  BBOExtractor.hpp  OBAnalizer.cpp  OBAnalizer.h  Serializer.hpp
tests/: source.cpp
